--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -16,6 +16,10 @@ section:not(.banner_sec, .careers) {
     padding: 1rem;
 }
 
+body{
+    min-width: 280px;
+}
+
 ul {
     list-style-type: none;
 }
@@ -519,6 +523,18 @@ ______________________________________
     margin-bottom: 10px;
 }
 
+.job span {
+    width: 50%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.job span:nth-child(2) {
+    text-align: end;
+
+}
+
 .see_positions {
     padding: .8rem 1.6rem;
     background-color: white;
@@ -539,6 +555,134 @@ ______________________________________
 .career_image img {
     width: 100%;
     height: auto;
+}
+
+
+/*
+______________________________________
+    games category Section
+______________________________________
+*/
+.category_sec {
+    margin: 5rem 0;
+}
+
+.category_container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.3rem;
+}
+
+.category_card {
+    gap: 1rem;
+}
+
+.category_card:hover {
+    border: #F948B2 solid 2px;
+    border-radius: 3rem;
+    color: #F948B2;
+    padding: .5rem;
+}
+
+.cc_img {
+    width: 60px;
+    height: 60px;
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+    border: none;
+    border-radius: 50%;
+}
+
+.cc_img img {
+    width: 100%;
+}
+
+.cc_name {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.footer {
+    background-color: rgba(11, 2, 35, 1);
+    color: #fff;
+    text-align: center;
+    padding: 120px 0;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.footer-content {
+    max-width: 814px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.logo {
+    width: 86px;
+    height: 40px;
+    object-fit: contain;
+}
+
+.nav-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 60px;
+    margin: 56px 0;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.nav-links a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.social_media {
+    justify-content: space-around;
+    width: 80%;
+    flex-wrap: wrap;
+}
+
+.sm_icons {
+    width: 5rem;
+    height: 5rem;
+}
+
+.sm_icons>img {
+    width: 60%;
+}
+
+.policy-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 64px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.policy-links a {
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+}
+
+.copyright {
+    margin-top: 2rem;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 
@@ -600,6 +744,34 @@ ________________________________________
         width: calc((100vw / 2) - 2rem);
     }
 
+    .s_banner_container {
+        flex-direction: column;
+    }
+
+    .s_b_imgs {
+        width: 95%;
+    }
+
+    .s_b_description {
+        align-items: center;
+        width: 50%;
+    }
+
+    .s_b_d_1_head,
+    .s_b_d_1_content,
+    .s_b_d_2_head,
+    .s_b_d_2_content {
+        text-align: center;
+    }
+
+    .s_b_d_2_container {
+        order: 1;
+    }
+
+    .s_b_2_imgs {
+        order: 2;
+    }
+
     .career_section {
         flex-direction: column;
         align-items: center;
@@ -615,6 +787,24 @@ ________________________________________
     .c_d_container,
     .career_image {
         width: 100%;
+    }
+
+    .footer {
+        padding: 100px 20px;
+    }
+
+    .logo-container {
+        font-size: 40px;
+    }
+
+    .nav-links,
+    .policy-links {
+        gap: 40px;
+        margin-top: 40px;
+    }
+
+    .social-icons {
+        margin-top: 40px;
     }
 }
 
@@ -748,4 +938,24 @@ ________________________________________
         text-overflow: ellipsis;
         white-space: nowrap;
     }
+
+    .footer {
+        padding: 80px 20px;
+    }
+
+    .logo-container {
+        font-size: 36px;
+    }
+
+    .nav-links,
+    .policy-links {
+        gap: 30px;
+        margin-top: 30px;
+    }
+
+    .social-icons {
+        margin-top: 30px;
+    }
 }
+
+
